crates/syntax/src/snapshots/syntax__tests__item_layer_tree.snap
---
source: crates/syntax/src/tests.rs
assertion_line: 63
description: "x: Int = 42; add: fn(a: Int) -> Int = a; Point: type = { x: Int };"
expression: dump(input)
---
[
    "SourceFile",
    "  ModuleInner",
    "    BindingItem",
    "      Binding",
    "        IdentPat",
    "          Ident \"x\"",
    "        Colon \":\"",
    "        Whitespace \" \"",
    "        PathType",
    "          Path",
    "            PathSegment",
    "              Ident \"Int\"",
    "        Whitespace \" \"",
    "        Eq \"=\"",
    "        Whitespace \" \"",
    "        LiteralExpr",
    "          Int \"42\"",
    "      Semi \";\"",
    "    Whitespace \" \"",
    "    FunctionItem",
    "      Ident \"add\"",
    "      Colon \":\"",
    "      Whitespace \" \"",
    "      KwFn \"fn\"",
    "      ParameterList",
    "        OpenParen \"(\"",
    "        Parameter",
    "          IdentPat",
    "            Ident \"a\"",
    "          Colon \":\"",
    "          Whitespace \" \"",
    "          PathType",
    "            Path",
    "              PathSegment",
    "                Ident \"Int\"",
    "        CloseParen \")\"",
    "      Whitespace \" \"",
    "      ThinArrow \"->\"",
    "      Whitespace \" \"",
    "      PathType",
    "        Path",
    "          PathSegment",
    "            Ident \"Int\"",
    "      Whitespace \" \"",
    "      Eq \"=\"",
    "      Whitespace \" \"",
    "      PathExpr",
    "        Path",
    "          PathSegment",
    "            Ident \"a\"",
    "      Semi \";\"",
    "    Whitespace \" \"",
    "    TypeItem",
    "      Ident \"Point\"",
    "      Colon \":\"",
    "      Whitespace \" \"",
    "      TypeKind",
    "        KwType \"type\"",
    "      Whitespace \" \"",
    "      Eq \"=\"",
    "      Whitespace \" \"",
    "      StructType",
    "        OpenBrace \"{\"",
    "        Whitespace \" \"",
    "        StructField",
    "          FieldName",
    "            Ident \"x\"",
    "          Colon \":\"",
    "          Whitespace \" \"",
    "          PathType",
    "            Path",
    "              PathSegment",
    "                Ident \"Int\"",
    "        Whitespace \" \"",
    "        CloseBrace \"}\"",
    "      Semi \";\"",
]
