crates/syntax/src/snapshots/syntax__tests__mod_decl_tree.snap
---
source: crates/syntax/src/tests.rs
description: "foo: mod;"
expression: dump(input)
---
[
    "SourceFile",
    "  ModuleInner",
    "    ModuleItem",
    "      Ident \"foo\"",
    "      Colon \":\"",
    "      Whitespace \" \"",
    "      KwMod \"mod\"",
    "      Semi \";\"",
]
