crates/syntax/src/snapshots/syntax__tests__unexpected_item_errors-2.snap
---
source: crates/syntax/src/tests.rs
assertion_line: 72
description: errors
expression: parse.errors()
---
[
    SyntaxError {
        error: Expected {
            expected: Ident,
            actual: Ident,
        },
        offset: 0,
    },
    SyntaxError {
        error: Expected {
            expected: Ident,
            actual: KwFn,
        },
        offset: 4,
    },
]
