crates/syntax/src/snapshots/syntax__tests__unexpected_item_errors.snap
---
source: crates/syntax/src/tests.rs
assertion_line: 71
description: foo fn;
expression: dump(input)
---
[
    "SourceFile",
    "  ModuleInner",
    "    Ident \"foo\"",
    "    Whitespace \" \"",
    "    KwFn \"fn\"",
    "    EmptyItem",
    "      Semi \";\"",
]
